fix: overflow on mobile screens

--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
 
 body {
    background-color: aliceblue;
-   overflow: hidden;
+   /* overflow: hidden; */
    font-size: 16px;
 }
 
@@ -156,6 +156,10 @@ footer {
 }
 
 @media (min-width: 768px) {
+   body {
+      overflow: hidden;
+   }
+
    header h1 {
       letter-spacing: 12px;
    }
